--- a/moozer-frontend/index.html
+++ b/moozer-frontend/index.html
@@ -14,10 +14,21 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Vite + React + TS</title>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+			integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+			crossorigin=""
+		/>
+		<script
+			src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+			integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+			crossorigin=""
+		></script>
+		<title>Moozer</title>
 	</head>
 	<body
-		class="font-body"
+		class="font-body bg-base-100"
 		data-theme="caramellatte"
 	>
 		<div id="root"></div>
